# ED-ImageProcessing

./: .gitignore  README.md  histo.py  image.c  image.h  main.c  meson.build
src/: meson.build
src/img/: image.c  image.h  meson.build
src/ui/: interface.c  interface.h  meson.build
utils/: image_utils.py  input_image_example_RGB.txt
